<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/order_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/tv_customizations_label"
            style="@style/FormTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap"
            android:text="@string/Customizations" />

        <RelativeLayout
            android:id="@+id/layout_tea_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/tv_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea_size" />

            <Spinner
                android:id="@+id/spinner_tea_size"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_size_label"
                android:drawSelectorOnTop="true" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/layout_milk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/tv_milk_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_choices" />

            <Spinner
                android:id="@+id/spinner_milk"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_milk_label"
                android:drawSelectorOnTop="true" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/layout_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/tv_sugar_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugar_choices" />

            <Spinner
                android:id="@+id/spinner_sugar"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_sugar_label"
                android:drawSelectorOnTop="true" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/layout_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/tv_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_decrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:onClick="onDecrementClick"
                    android:text="-"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/initial_quantity_value"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btn_increment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:onClick="onIncrementClick"
                    android:text="+"
                    android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_gap"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/tv_total_label"
                style="@style/FormTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/FormTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_brew_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onBrewTeaClick"
            android:enabled="false"
            android:text="@string/brew_tea" />
    </LinearLayout>
</ScrollView>